# peam-backend

./: .dockerignore  .env.dev.example  .env.local.dev.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
docker/.dev/: .env.dev  .env.dev.example  .env.dev.postgres  start.sh
docker/.prod/: .env.prod.example  .env.prod.postgres.example  start.sh
docker/scripts/: setup_plagiarism.py
src/: gunicorn_config.py
src/authentication/: serializers.py  urls.py
src/core/: admin.py  constants.py  models.py  settings.py  urls.py  wsgi.py
src/core/auth/: adapters.py  serializers.py  views.py
src/core/invitations/: serializers.py
src/core/locator/: resources.py  serializers.py  urls.py  views.py
src/core/management/commands/: create_admin_user.py  setup_plagiarism.py  setup_site.py  test_plagiarism.py
src/core/migrations/: 0001_initial.py  0002_auto_20201228_1209.py  0002_auto_20210102_2319.py  0002_auto_20210130_1600.py  0002_auto_20210207_1821.py  0002_auto_20210219_0719.py  0002_auto_20210220_0354.py
src/core/models/: __init__.py  invitations.py
src/core/serializers/: __init__.py  invitation.py
src/core/settings/: base.py  dev.py  prod.py  test.py
src/core/templates/invitations/: email_invite_message.txt
src/core/templates/invitations/course/: email_invite_message.txt  email_invite_subject.txt
src/core/templates/invitations/team/: email_invite_message.txt  (+1 more)
src/core/tests/: test_auth.py
src/core/utils/: flex_fields.py  inlines.py  invitations.py  mixins.py  openapi.py  tz.py
src/courses/: admin.py  constants.py  inlines.py  locator.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
src/courses/invitations/: permissions.py  serializers.py  views.py
src/courses/invites/: serializers.py  views.py
src/courses/migrations/: 0001_initial.py  0002_auto_20201228_1209.py  0002_auto_20210102_2319.py  0002_auto_20210130_1600.py  0002_auto_20210207_1821.py  0002_auto_20210219_0719.py  0002_auto_20210220_0354.py  0003_auto_20210216_2253.py  0003_auto_20210220_0722.py  0004_auto_20210218_2109.py  0004_auto_20210402_1539.py  0005_auto_20210219_0109.py  0005_auto_20210519_1732.py
src/courses/project_uploading/: serializers.py  views.py
src/courses/utils/: __init__.py  db.py
src/plagiarism/: apps.py  serializers.py  sources.py  tokens.py  urls.py  views.py
src/plagiarism/management/commands/: setup_plagiarism.py  test_plagiarism.py
src/projects/: admin.py  inlines.py  models.py  serializers.py
src/projects/migrations/: 0001_initial.py  0002_auto_20201228_1209.py  0002_auto_20210102_2319.py  0002_auto_20210130_1600.py
src/settings/: base.py  dev.py  prod.py  test.py
src/tests/authentication/: test_api.py
src/tests/factories/: users.py
src/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_auto_20210218_2109.py  0002_auto_20210220_0722.py  0003_auto_20210518_1739.py
src/users/models/: __init__.py  student.py  teacher.py  user.py
src/users/tests/: factories.py
