[tool.poetry]
name = "peam-backend"
version = "0.1.0"
description = ""
authors = ["abdelrahman kandil <abdelrahmankandil@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
psycopg2 = "^2.8.6"
drf-yasg = "^1.20.0"
argon2-cffi = "^20.1.0"
Pillow = "^8.0.1"
django-grappelli = "^2.14.3"
dj-rest-auth = { extras = ["with_social"], version = "^2.1.3" }
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
coverage = "^5.3"
black = "^20.8b1"
pre-commit = "^2.9.3"
mypy = "^0.800"
django-extensions = "^3.1.0"
factory-boy = "^3.1.0"
pytest-django = "^4.1.0"

[tool.black]
line-length = 120
exclude = '/(\.git|\.hg|\.mypy_cache|__pycache__|\.tox|migrations|venv|linux-venv)/'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
norecursedirs = ["*.egg", ".*", "venv", "__pycache__"]
python_files = "test_*.py"
# addopts = "-p no:warnings"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
