[tool.poetry]
name = "peam-backend"
version = "0.1.0"
description = ""
authors = ["abdelrahman kandil <abdelrahmankandil@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.2,<3.9"
Django = "3.2.19"
djangorestframework = "3.12.2"
django-cors-headers = "3.5.0"
django-environ = "0.4.5"
whitenoise = "5.2.0"
psycopg2 = "2.8.6"
drf-yasg = "1.20.0"
argon2-cffi = "20.1.0"
Pillow = "8.0.1"
django-grappelli = "2.14.3"
dj-rest-auth = { extras = ["with_social"], version = "2.1.3" }
djangorestframework-simplejwt = "4.6.0"
drf-flex-fields = "0.8.9"
tree-sitter = "0.19.0"
gunicorn = "20.1.0"
requests = "2.29.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
coverage = "7.2.5"
factory-boy = "3.2.1"
pytest-django = "4.5.2"
django-extensions = "3.2.1"
pre-commit = "3.3.1"

[tool.black]
line-length = 120
exclude = '/(\.git|\.hg|\.mypy_cache|__pycache__|\.tox|migrations|venv|plagiarism/vendor|linux-venv)/'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
norecursedirs = ["*.egg", ".*", "venv", "__pycache__"]
python_files = "test_*.py"
# addopts = "-p no:warnings"


[build-system]
requires = ["poetry-core==1.4.2"]
build-backend = "poetry.core.masonry.api"
